--- a/src/app/attendance/page.module.css
+++ b/src/app/attendance/page.module.css
@@ -248,4 +248,8 @@
   .tableWrapper {
     padding: 1rem;
   }
+
+  .table {
+    min-width: 650px;
+  }
 }
