--- a/src/app/fees/page.module.css
+++ b/src/app/fees/page.module.css
@@ -282,4 +282,8 @@
   .tableWrapper {
     padding: 1rem;
   }
+
+  .table {
+    min-width: 650px;
+  }
 }
