--- a/src/app/leads/page.module.css
+++ b/src/app/leads/page.module.css
@@ -250,4 +250,8 @@
   .tableWrapper {
     padding: 1rem;
   }
+
+  .table {
+    min-width: 650px;
+  }
 }
