--- a/src/app/students/page.module.css
+++ b/src/app/students/page.module.css
@@ -528,5 +528,9 @@
   .tableWrapper {
     padding: 1rem;
   }
+
+  .table {
+    min-width: 650px;
+  }
 }
 
